# rl_sensor_scheduling_framework

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
configs/: base.yaml  base_complex.yaml
docs/: current_rl_route_explainer.md  forecast_reward_enable_plan.md  framework_architecture_diagram.md  group_meeting_report_20260326.md  group_meeting_summary_20260326.md  group_meeting_summary_20260326.pptx  paper_conclusion_draft.md  predictor_baselines.md  reward_design_refactor_plan.md  scheduler_baselines.md  sensor_warmup_design_plan.md
scripts/: 00_generate_business_data.py  00b_pretrain_reward_predictor.py  01_train_rl_scheduler.py  02_evaluate_scheduler.py  03_build_forecast_dataset.py  04_eval_frozen_predictors.py  04_eval_frozen_predictors_multi_gpu.sh  04_train_predictors.py  04_train_predictors_multi_gpu.sh  05_evaluate_forecasts.py  06_posthoc_analysis.py  07_export_report.py  07_plot_scheduler_prediction_curves.py  08_plot_sensor_activation_timelines.py  09_generate_all_plots.py  10_posthoc_task_focus.py  11_plot_rl_training_diagnostics.py  12_build_group_meeting_ppt.py  13_plot_legacy_style_summaries.py  14_diagnose_full_open_bias.py  run_full_experiment_tmux.sh
tests/: test_action_space.py  test_context_features.py  test_dataset_sensor.py  test_dqn_agent.py  test_env.py  test_forecast_dataset_builder.py  test_kalman.py  test_mainline_reward.py  test_online_projector.py  test_reward_oracle_pipeline.py  test_scheduler_baselines.py  test_sensor.py  test_sensor_warmup.py  test_sequence_metrics.py  test_truth_pipeline_splits.py
(+127 files in other folders)
