[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-sensor-scheduling-framework"
version = "0.1.0"
description = "Power-constrained multi-sensor scheduling with RL"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "microclimate_demo"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "torch>=2.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "scipy>=1.10"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
